Correct the badge and the body display on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -102,7 +102,7 @@ $enable-negative-margins: true;
 }
 
 .fhir-ui__Badge {
-  height: 24px;
+  width: fit-content;
 }
 
 .header__title-row {
